--- a/.github/workflows/remove-beta.yml
+++ b/.github/workflows/remove-beta.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           repository: ${{ github.repository_owner }}/winget-pkgs
           sparse-checkout: |
-            manifests/i/Insco
+            manifests/i/PicGuard
             .gitattributes
             .gitignore
           token: ${{ secrets.WINGET_UPDATER_TOKEN }}
@@ -60,11 +60,11 @@ jobs:
 
       - name: Create branch
         run: |
-          git branch Remove-Insco.PicGuard.Beta-${{ needs.get_version.outputs.version }}
-          git switch Remove-Insco.PicGuard.Beta-${{ needs.get_version.outputs.version }}
+          git branch Remove-PicGuard.PicGuard.Beta-${{ needs.get_version.outputs.version }}
+          git switch Remove-PicGuard.PicGuard.Beta-${{ needs.get_version.outputs.version }}
 
       - name: Remove version
-        run: rm -rf manifests/i/Insco/PicGuard/Beta/${{ needs.get_version.outputs.version }}
+        run: rm -rf manifests/i/PicGuard/PicGuard/Beta/${{ needs.get_version.outputs.version }}
 
       - name: Commit & Push
         run: |
@@ -72,8 +72,8 @@ jobs:
           git config --global user.name "${{ vars.GIT_NAME }}"
           git config --global core.autocrlf false
           git add .
-          git commit -m "Remove version: Insco.PicGuard.Beta version ${{ needs.get_version.outputs.version }}"
-          git push --set-upstream origin Remove-Insco.PicGuard.Beta-${{ needs.get_version.outputs.version }}
+          git commit -m "Remove version: PicGuard.PicGuard.Beta version ${{ needs.get_version.outputs.version }}"
+          git push --set-upstream origin Remove-PicGuard.PicGuard.Beta-${{ needs.get_version.outputs.version }}
 
   pr:
     if: ${{ inputs.is_pr }}
@@ -91,6 +91,6 @@ jobs:
           gh pr create \
             --repo https://github.com/microsoft/winget-pkgs \
             --base master \
-            --head ${{ github.repository_owner }}:Remove-Insco.PicGuard.Beta-${{ needs.get_version.outputs.version }} \
-            --title "Remove version: Insco.PicGuard.Beta version ${{ needs.get_version.outputs.version }}" \
+            --head ${{ github.repository_owner }}:Remove-PicGuard.PicGuard.Beta-${{ needs.get_version.outputs.version }} \
+            --title "Remove version: PicGuard.PicGuard.Beta version ${{ needs.get_version.outputs.version }}" \
             --body "### Pull request created by [PicGuard-WinGet-Updater](https://github.com/${{ github.repository }}) workflow run [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})"
