--- a/beta/PicGuard.PicGuard.Beta.locale.zh-CN.yaml
+++ b/beta/PicGuard.PicGuard.Beta.locale.zh-CN.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.4.1 $debug=NVS1.CRLF.7-4-2.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
-PackageIdentifier: Insco.PicGuard.Beta
+PackageIdentifier: PicGuard.PicGuard.Beta
 PackageVersion: ${version}
 PackageLocale: zh-CN
 Publisher: Qiazo
