--- a/stable/PicGuard.PicGuard.Pro.installer.yaml
+++ b/stable/PicGuard.PicGuard.Pro.installer.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.4.1 $debug=NVS1.CRLF.7-4-2.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
-PackageIdentifier: Insco.PicGuard
+PackageIdentifier: PicGuard.PicGuard.Pro
 PackageVersion: ${version}
 Platform:
   - Windows.Desktop
@@ -16,7 +16,7 @@ UpgradeBehavior: install
 ReleaseDate: ${releasedate}
 Installers:
   - Architecture: x64
-    InstallerUrl: https://github.com/picguard/picguard/releases/download/v${release}/picguard-${version}-windows-x64-en-US.msi
+    InstallerUrl: https://github.com/picguard/picguard/releases/download/v${release}/picguard-pro-${version}-windows-x64-en-US.msi
     InstallerSha256: ${ensha256}
     InstallerLocale: en-US
     ProductCode: '${enproductcode}'
@@ -24,7 +24,7 @@ Installers:
       - ProductCode: '${enproductcode}'
         UpgradeCode: '${enupgradecode}'
   - Architecture: x64
-    InstallerUrl: https://github.com/picguard/picguard/releases/download/v${release}/picguard-${version}-windows-x64-zh-CN.msi
+    InstallerUrl: https://github.com/picguard/picguard/releases/download/v${release}/picguard-pro-${version}-windows-x64-zh-CN.msi
     InstallerSha256: ${zhsha256}
     InstallerLocale: zh-CN
     ProductCode: '${zhproductcode}'
