--- a/stable/PicGuard.PicGuard.Pro.locale.zh-CN.yaml
+++ b/stable/PicGuard.PicGuard.Pro.locale.zh-CN.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.4.1 $debug=NVS1.CRLF.7-4-2.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
-PackageIdentifier: Insco.PicGuard.Pro.Beta
+PackageIdentifier: PicGuard.PicGuard.Pro
 PackageVersion: ${version}
 PackageLocale: zh-CN
 Publisher: Qiazo
@@ -9,7 +9,7 @@ PublisherUrl: https://qiazo.com
 PublisherSupportUrl: https://qiazo.com/zh/support
 PrivacyUrl: https://picguard.app/zh/legal/privacy
 Author: kjxbyz
-PackageName: PicGuard Pro(Beta)
+PackageName: PicGuard Pro
 PackageUrl: https://picguard.app
 License: GPL-3.0
 LicenseUrl: https://raw.githubusercontent.com/picguard/picguard/main/LICENSE
@@ -25,10 +25,10 @@ Description: |
   立即下载 **PicGuard Pro**，以前所未有的方式控制您的照片安全和个性化！
 Tags:
   - picguard
-  - picguard-pro
+  - picguard pro
   - watermark
   - watermarkassistant
   - watermark-assistant
-ReleaseNotesUrl: https://raw.githubusercontent.com/picguard/picguard/v${release}.rc/CHANGELOG.md
+ReleaseNotesUrl: https://raw.githubusercontent.com/picguard/picguard/v${release}/CHANGELOG.md
 ManifestType: locale
 ManifestVersion: 1.10.0
